tests/ui/associated-inherent-types/issue-109071.with_gate.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/issue-109071.rs:8:17
   |
LL |     type Item = &[T];
   |                 ^ explicit lifetime name needed here

error[E0107]: missing generics for struct `Windows`
  --> $DIR/issue-109071.rs:7:9
   |
LL | impl<T> Windows {
   |         ^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/issue-109071.rs:5:8
   |
LL | struct Windows<T> { t: T }
   |        ^^^^^^^ -
help: add missing generic argument
   |
LL | impl<T> Windows<T> {
   |                +++

error[E0223]: ambiguous associated type
  --> $DIR/issue-109071.rs:15:22
   |
LL |     fn T() -> Option<Self::Item> {}
   |                      ^^^^^^^^^^
   |
help: use fully-qualified syntax
   |
LL |     fn T() -> Option<<Windows<T> as IntoAsyncIterator>::Item> {}
   |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
LL |     fn T() -> Option<<Windows<T> as IntoIterator>::Item> {}
   |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0223, E0637.
For more information about an error, try `rustc --explain E0107`.
